--- a/r_scripts/data_wrangling.Rmd
+++ b/r_scripts/data_wrangling.Rmd
@@ -656,6 +656,9 @@ row.names(in_trans_df) <- NULL
 lin_contingency_tab <- rbind(lin, tab2df(table(metadata[!(metadata[,"wgs_id"] %in% names(clusters)), ]$main_lineage)))
 row.names(lin_contingency_tab) <- c("yes", "no")
 
+# Make df
+lin_contingency_tab_df <- lin_contingency_tab
+
 # Convert the data as a table
 lin_contingency_tab <- as.table(as.matrix(lin_contingency_tab))
 
@@ -670,6 +673,9 @@ trans_lin_chi_sq_ph <- chisq.posthoc.test(lin_contingency_tab)
 # Row-bind the samples that are 'in transmission' vs non-in-transmission, by DR
 dr_contingency_tab <- rbind(dr, tab2df(table(metadata[!(metadata[,"wgs_id"] %in% names(clusters)), ]$dr_status)))
 row.names(dr_contingency_tab) <- c("yes", "no")
+
+# Make df
+dr_contingency_tab_df <- dr_contingency_tab
 
 # Convert the data as a table
 dr_contingency_tab <- as.table(as.matrix(dr_contingency_tab))
@@ -687,6 +693,9 @@ loc_contingency_tab <- loc_piviot[, !(names(loc_piviot) %in% "trans_status")]
 loc_contingency_tab <- loc_contingency_tab[c(2, 1), ]
 row.names(loc_contingency_tab) <- c("yes", "no")
 
+# Make df
+loc_contingency_tab_df <- loc_contingency_tab
+
 # Convert the data as a table
 loc_contingency_tab <- as.table(as.matrix(loc_contingency_tab))
 # Do test
@@ -695,6 +704,65 @@ trans_loc_chi_sq <- chisq.test(loc_contingency_tab, simulate.p.value = T)
 trans_loc_chi_sq_ph <- chisq.posthoc.test(loc_contingency_tab)
 
 
+
+# Odds ratios
+
+# MAKE FUNCTION FOR COL OF INTEREST AFTER CHI-SQ POST-HOC TESTS
+or <- function(x, column){
+
+  # Get the odds ratio for a contingengy table of dimensions 2 x (>2)
+  # Input is a dataframe
+  
+  # e.g. With dataframe:
+  #        A   B   C   D
+  # yes    7   21  98  43
+  # no     15  15  299 37
+  
+  # If we're interested in column B, the function column-binds the sum of the other column rows with column B:
+  
+  #       A   C   D
+  # yes   7   98  43
+  # no    15  299 37
+  
+  # > sum > 
+  
+  #        [,1]
+  # [1,]  148
+  # [2,]  351
+  
+  # > column-bind with col B >
+  
+  #        B   not-B
+  # yes    21  148
+  # no     15  351
+  
+  # Then do this calculation to get the odds ratio:  (a*d)/(b*c)
+  # Where 
+  
+  #        B  not-B
+  # yes    a  b
+  # no     c  d
+  
+  not_df <- x[!(names(x) %in% column)]
+  df <- setNames(cbind(x[column], rbind(sum(not_df[1, ]), sum(not_df[2, ]))), c(column, "not"))
+  
+  a <- df[1, 1]
+  b <- df[1, 2]
+  c <- df[2, 1]
+  d <- df[2, 2]
+  
+  (a*d)/(b*c)
+
+}
+
+# Lin
+or(lin_contingency_tab_df, "2")
+or(lin_contingency_tab_df, "4")
+
+or(dr_contingency_tab_df, "Pre-XDR")
+or(dr_contingency_tab_df, "XDR")
+
+or(loc_contingency_tab_df, "Peshawar")
 
 ```
 
@@ -1497,6 +1565,11 @@ Joint SNP calling was processed in gatk GenotypeGVCFs v4.1.3.0 [@Depristo2011]. 
 A multi-FASTA format file was created from the filtered SNP file and H37Rv reference fasta using bedtools makewindows v2.28.0 [@Quinlan2010] which in turn was used to construct a phylogenetic tree with IQ-TREE v1.6.12. Here, a general time reversible model with rate heterogeneity set to a discrete Gamma model and an ascertainment bias correction were used (parameters -m GTR+G+ASC), with 1000 bootstrap samples used to measure branch quality and robustness. [@Nguyen2015] [@Hoang2018] [@Tavare1986] [@Lewis2001] [@Yang1994].
 
 Pairwise distance matrices were calculated in Plink v1.90b4 [@Purcell2007]. Drug resistance status, drug resistance-associated mutations, other mutations, and lineages were predicted *in silico* using TB-Profiler v2.4 [@Phelan2019] [@Coll2015] [@Napier2020]. In categorising samples as *Susceptible*, *Pre-MDR*, *MDR*, *Pre-XDR*, *XDR*, or *other*, the TB-Profiler predictions were used in place of missing or contradictory DST data. 
+
+Linear mixed models have been previously applied to adjust for the confounds of *Mtb* (sub-)lineage and outbreak-based population structure [@Phelan2016b].Therefore a linear mixed regression model was conducted to estimate the strength of association between the binary "transmission"/"non-transmission" outcome and SNPs, conducted in GEMMA (v.1.1.2) [@Zhou2012].
+
+
+
 
 <!--
 
